// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialsContext should apply a hook for retrieving data from multiple selectors: selector responses 1`] = `
{
  "errorResponse": {
    "data": [],
    "date": undefined,
    "error": true,
    "errorMessage": "Lorem ipsum",
    "expandedRows": undefined,
    "fulfilled": undefined,
    "hasData": false,
    "pending": undefined,
    "selectedRows": undefined,
    "totalResults": 0,
  },
  "fulfilledResponse": {
    "data": [
      "dolor",
      "sit",
    ],
    "date": undefined,
    "error": undefined,
    "errorMessage": undefined,
    "expandedRows": undefined,
    "fulfilled": true,
    "hasData": false,
    "pending": undefined,
    "selectedRows": undefined,
    "totalResults": 0,
  },
  "mockStoreSuccessResponse": {
    "data": [
      "lorem",
      "ipsum",
    ],
    "date": undefined,
    "error": false,
    "errorMessage": null,
    "expandedRows": {},
    "fulfilled": true,
    "hasData": false,
    "pending": false,
    "selectedRows": {},
    "totalResults": 0,
  },
  "pendingResponse": {
    "data": [],
    "date": undefined,
    "error": undefined,
    "errorMessage": undefined,
    "expandedRows": undefined,
    "fulfilled": undefined,
    "hasData": false,
    "pending": true,
    "selectedRows": undefined,
    "totalResults": 0,
  },
}
`;

exports[`CredentialsContext should apply a hook for returning a get response: get responses 1`] = `
{
  "errorResponse": {
    "error": true,
    "message": "Lorem ipsum",
  },
  "fulfilledResponse": {
    "data": {
      "view": {
        "results": [
          "dolor",
          "sit",
        ],
      },
    },
    "fulfilled": true,
  },
  "mockStoreSuccessResponse": {
    "data": [
      "lorem",
      "ipsum",
    ],
    "date": undefined,
    "error": false,
    "errorMessage": null,
    "expandedRows": {},
    "fulfilled": true,
    "hasData": false,
    "pending": false,
    "selectedRows": {},
    "totalResults": 0,
  },
  "pendingResponse": {
    "pending": true,
  },
}
`;

exports[`CredentialsContext should handle deleting a credential with a confirmation: dispatch onDelete 1`] = `
[
  [
    {
      "body": undefined,
      "confirmButtonText": "t(form-dialog.label, {"context":"delete"})",
      "heading": "t(form-dialog.confirmation_heading, {"context":"delete-credential","count":1,"name":"lorem ipsum name"}, [object Object])",
      "onConfirm": [Function],
      "title": "t(form-dialog.confirmation_title, {"context":"delete-credential","count":1})",
    },
  ],
]
`;

exports[`CredentialsContext should return specific properties: specific properties 1`] = `
{
  "INITIAL_QUERY": {
    "ordering": "name",
    "page": 1,
    "page_size": 10,
  },
  "VIEW_ID": "credentials",
  "useCredentials": [Function],
  "useGetCredentials": [Function],
  "useOnDelete": [Function],
  "useOnEdit": [Function],
  "useOnExpand": [Function],
  "useOnSelect": [Function],
}
`;
